--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
 
     <!-- Tuan Anh css-->
     <link href="~/css/tuananh.css" rel="stylesheet"/>
+
+    <!--cho phần nhúng css vào partial view của userfavorites-->
+    @RenderSection("Styles", required: false)
 </head>
 <body class="bg-light">
     <!-- Navbar start -->
