feat: create recipe ingredients and steps

--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
             </div>
         </div>
         <!-- Navbar End -->
-    <div class="container">
+    <div id="mainbody" class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -205,6 +205,7 @@
     <link href="~/lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
     <script src="~/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@@fancyapps/ui/dist/fancybox.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
