--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -53,32 +53,22 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="cart.html" class="dropdown-item">Cart</a>
-                                    <a href="chackout.html" class="dropdown-item">Chackout</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        <a href="/Recipes/Category" class="nav-item nav-link">Category</a>
-                        <a href="/UsersPage/List" class="nav-item nav-link">List user </a>
-                        <a href="/UsersPage/UpdatePass" class="nav-item nav-link">Change Password </a>
+                            <a href="/Recipes/Create" class="nav-item nav-link">Tạo Công thức</a>
+                            <a href="/Recipes/Category" class="nav-item nav-link">Danh sách danh mục</a>
+                            <a href="/RecipeIngredients/Index" class="nav-item nav-link">Danh sách nguyên liệu</a>
                         </div>
                         <div class="d-flex m-3 me-0">
-                            <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                            <a href="#" class="position-relative me-4 my-auto">
-                                <i class="fa fa-shopping-bag fa-2x"></i>
-                                <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                            </a>
+                        <div class="nav-item dropdown">
                             <a href="/Login" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
+                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                                <a href="/UserFavorites/Index" class="dropdown-item">Món ăn yêu thích</a>
+                                <a href="/UsersPage/UpdatePass" class="dropdown-item">Đổi mật khẩu</a>
+                                <a href="/Logout" class="dropdown-item">Đăng xuất</a>
+                            </div>
+                        </div>
+                           
                         </div>
                     </div>
                 </nav>
