--- a/HomNayAnGi/HomNayAnGiApp/Pages/UsersPage/UpdatePass.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/UsersPage/UpdatePass.cshtml
@@ -12,18 +12,18 @@
             <div class="row g-3">
                 <div class="col-12">
                     <label>Mật khẩu cũ</label>
-                    <input type="password" id="oldpass" name="oldpass" class="form-control bg-light border-0 px-4" style="height: 55px;" required>
+                    <input type="password" id="oldpass" name="oldpass" class="form-control bg-white border-0 px-4" style="height: 55px;" required>
                 </div>
                 <div class="col-12">
                     <label>Mật khẩu mới </label>
-                    <input type="password" id="pass1" name="pass1" class="form-control bg-light border-0 px-4" style="height: 55px;" required>
+                    <input type="password" id="pass1" name="pass1" class="form-control bg-white border-0 px-4" style="height: 55px;" required>
                     <div class="invalid-feedback">
                         Mật khẩu phải có ít nhất 8 ký tự, bao gồm 1 chữ in hoa, 1 chữ in thường, 1 số và 1 ký tự đặc biệt.
                     </div>
                 </div>
                 <div class="col-12">
                     <label>Nhập lại mật khẩu mới</label>
-                    <input type="password" id="pass2" name="pass2" class="form-control bg-light border-0 px-4" style="height: 55px;" required>
+                    <input type="password" id="pass2" name="pass2" class="form-control bg-white border-0 px-4" style="height: 55px;" required>
                     <div class="invalid-feedback">
                         Mật khẩu phải có ít nhất 8 ký tự, bao gồm 1 chữ in hoa, 1 chữ in thường, 1 số và 1 ký tự đặc biệt.
                     </div>
