Fix Owner Recipe

--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
                             <a href="/Recipes/Create" class="nav-item nav-link">Tạo Công thức</a>
                             <a href="/Recipes/Category" class="nav-item nav-link">Danh sách danh mục</a>
                             <a href="/RecipeIngredients/Index" class="nav-item nav-link">Danh sách nguyên liệu</a>
+                        <a href="/ReceipeOwner/Index" class="nav-item nav-link">Công thức của bạn</a>
                         </div>
                         <div class="d-flex m-3 me-0">
                         <div class="nav-item dropdown">
