--- a/HomNayAnGi/HomNayAnGiApp/Pages/Nutritions/Index.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Nutritions/Index.cshtml
@@ -8,41 +8,50 @@
     <div class="col-md-6 col-sm-12 mt-3">
         <h4> GIÁ TRỊ DINH DƯỠNG</h4>
 
-        <div class="mb-3">
-            <label class="form-label">Calo (kcal)</label>
-            <input asp-for="NutritionFactDTO.Calories" class="form-control" readonly />
 
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Chất đạm (gam)</label>
-            <input asp-for="NutritionFactDTO.Protein" class="form-control" readonly />
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Chất béo (miligam)</label>
-            <input asp-for="NutritionFactDTO.Fat" class="form-control" readonly />
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Chất đường bột (gam)</label>
-            <input asp-for="NutritionFactDTO.Carbohydrates" class="form-control" readonly />
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Chất xơ (gam)</label>
-            <input asp-for="NutritionFactDTO.Fiber" class="form-control" readonly />
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Đường (gam)</label>
-            <input asp-for="NutritionFactDTO.Sugar" class="form-control" readonly />
-        </div>
+        @if (Model.NutritionFactDTO == null)
+        {
+            <div class="row">
+                <a class="btn btn-success w-100" href="/Nutritions/Create?Id=@Model.RecipeId">Tạo bảng giá trị dinh dưỡng</a>
+            </div>
+        }
+        else
+        {
+            <div class="mb-3">
+                <label class="form-label">Calo (kcal)</label>
+                <input asp-for="NutritionFactDTO.Calories" class="form-control" readonly />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Chất đạm (gam)</label>
+                <input asp-for="NutritionFactDTO.Protein" class="form-control" readonly />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Chất béo (miligam)</label>
+                <input asp-for="NutritionFactDTO.Fat" class="form-control" readonly />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Chất đường bột (gam)</label>
+                <input asp-for="NutritionFactDTO.Carbohydrates" class="form-control" readonly />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Chất xơ (gam)</label>
+                <input asp-for="NutritionFactDTO.Fiber" class="form-control" readonly />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Đường (gam)</label>
+                <input asp-for="NutritionFactDTO.Sugar" class="form-control" readonly />
+            </div>
 
-        <div class="row">
-            <a class="btn btn-primary" href="/Nutritions/Update?recipeId=@Model.RecipeId">Cập nhật</a>
-        </div>
-        <div class="row mt-3">
-            <form method="post">
-                <input asp-for="RecipeId" value="@Model.RecipeId" type="hidden" />
-                <button type="submit" class="btn btn-danger w-100" asp-page-handler="Delete">Xóa</button>
-            </form>
-        </div>
+            <div class="row">
+                <a class="btn btn-primary" href="/Nutritions/Update?recipeId=@Model.RecipeId">Cập nhật</a>
+            </div>
+            <div class="row mt-3">
+                <form method="post">
+                    <input asp-for="RecipeId" value="@Model.RecipeId" type="hidden" />
+                    <button type="submit" class="btn btn-danger w-100" asp-page-handler="Delete">Xóa</button>
+                </form>
+            </div>
+        }
     </div>
     <div class="col-md-3 col-sm-12 mt-3"></div>
 </div>
